cluster/apps/cert-manager/network-policies.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Controller: kube-apiserver egress
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-controller-kube-api-egress
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Controller: ACME HTTP-01 and DNS-01 challenges
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-controller-acme-egress
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
  egress:
    # ACME HTTP-01 challenges
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # DNS-01 verification (1.1.1.1, 1.0.0.1)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# CA Injector: kube-apiserver egress
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cainjector-kube-api-egress
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: cainjector
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Webhook: kube-apiserver egress
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-webhook-kube-api-egress
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: webhook
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Webhook: ingress from kube-apiserver for admission webhooks
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-webhook-ingress
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: webhook
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Metrics: ingress from vmagent (all components)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-metrics-ingress
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            k8s:app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
